# neuro-cli

./: .gitbook.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLI.in.md  CLI.md  LICENSE  LICENSE.txt  Makefile  README.in.md  README.md  RELEASE.md  SUMMARY.md  VERSION.txt  appveyor.yml  azure-pipelines.yml  out  pyproject.toml  pytest.ini  setup.cfg  setup.py  towncrier.toml
.azure-pipelines/: ci.yml  (+6 more)
apolo-cli/: MANIFEST.in  README.md  pyproject.toml  setup.cfg
apolo-cli/docs/: README.md  acl.md  admin.md  blob.md  completion.md  config.md  disk.md  image.md  job.md  secret.md  service-account.md  shortcuts.md  storage.md  topic-aliases.md  topic-secrets.md  topic-sharing.md  topic-top-format.md  topic-user-config.md
apolo-cli/src/: neuro_cli
apolo-cli/src/apolo_cli/: __init__.py  admin.py  ael.py  alias.py  asyncio_utils.py  blob_storage.py  click_types.py  completion.py  config.py  const.py  defaults.py  disks.py  docker_credential_helper.py  file_logging.py  image.py  job.py  log_formatter.py  main.py  parse_utils.py  plugin.py  root.py  secrets.py  service_accounts.py  share.py  stats.py  storage.py  topics.py  utils.py
apolo-cli/src/apolo_cli/formatters/: admin.py  blob_storage.py  bucket_credentials.py  buckets.py  config.py  disks.py  images.py  jobs.py  secrets.py  service_accounts.py  storage.py  utils.py
apolo-cli/tests/: __init__.py  conftest.py
apolo-cli/tests/e2e/: __init__.py  clear-all-my-permissions.sh  conftest.py  test_e2e.py  test_e2e_admin.py  test_e2e_blob_storage.py  test_e2e_images.py  test_e2e_jobs.py  test_e2e_share.py  test_e2e_storage.py
apolo-cli/tests/unit/: conftest.py  test_admin.py  test_ael.py  test_alias.py  test_click_types.py  test_click_utils.py  test_config.py  test_docker_helper.py  test_job.py  test_parse_utils.py  test_root.py  test_secrets.py  test_shell_completion.py  test_stats.py  test_storage.py  test_storage_progress.py  test_utils.py
apolo-sdk/: MANIFEST.in  README.md  pyproject.toml  setup.cfg
apolo-sdk/docs/: buckets_reference.rst  client_reference.rst  conf.py  config_reference.rst  disks_reference.rst  functions_reference.rst  images_reference.rst  index.rst  jobs_reference.rst  jobs_usage.rst  parse_reference.rst  plugin_reference.rst  reference.rst  secrets_reference.rst  service_accounts_reference.rst  spelling_wordlist.txt  storage_reference.rst  storage_usage.rst  users_reference.rst
apolo-sdk/src/apolo_sdk/: __init__.py  _abc.py  _admin.py  _bucket_base.py  _buckets.py  _client.py  _clusters.py  _config.py  _config_factory.py  _core.py  _disks.py  _errors.py  _file_utils.py  _gcs_bucket_provider.py  _images.py  _jobs.py  _login.py  _parser.py  _parsing_utils.py  _plugins.py  _rewrite.py  _s3_bucket_provider.py  _secrets.py  _server_cfg.py  _storage.py  _tracing.py  _url_utils.py  _users.py  _utils.py  _version_utils.py
apolo-sdk/src/neuro_sdk/: __init__.py
apolo-sdk/tests/: __init__.py  conftest.py  test_admin.py  test_blob_storage.py  test_bucket_persistent_credentials.py  test_buckets.py  test_client.py  test_clusters.py  test_config.py  test_config_factory.py  test_core.py  test_disks.py  test_file_filter.py  test_file_utils.py  test_images.py  test_jobs.py  test_login.py  test_login_utils.py  test_parser.py  test_plugins.py  test_public_names.py  test_retry.py  test_secrets.py  test_service_accounts.py  test_storage.py  test_storage_filestatus.py  test_tools.py  test_url_utils.py  test_users.py  test_version_check.py
neuro-sdk/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
neuro-sdk/docs/: blob_storage_reference.rst  buckets_reference.rst  client_reference.rst  conf.py  config_reference.rst  disks_reference.rst  functions_reference.rst  glossary.rst  images_reference.rst  index.rst  jobs_reference.rst  jobs_usage.rst  parse_reference.rst  plugin_reference.rst  reference.rst  secrets_reference.rst  service_accounts_reference.rst  spelling_wordlist.txt  storage_reference.rst  storage_usage.rst  users_reference.rst
neuro-sdk/neuro_sdk/: __init__.py  abc.py  blob_storage.py  config.py  config_factory.py  core.py  errors.py  images.py  jobs.py  login.py  parsing_utils.py  quota.py  secrets.py  server_cfg.py  storage.py  tracing.py  url_utils.py  utils.py
neuro-sdk/src/neuro_sdk/: __init__.py  _abc.py  _admin.py  _azure_bucket_provider.py  _bucket_base.py  _buckets.py  _client.py  _clusters.py  _config.py  _config_factory.py  _core.py  _disks.py  _errors.py  _file_filter.py  _file_utils.py  _gcs_bucket_provider.py  _images.py  _jobs.py  _login.py  _parser.py  _parsing_utils.py  _plugins.py  _rewrite.py  _s3_bucket_provider.py  _secrets.py  _server_cfg.py  _service_accounts.py  _storage.py  _url_utils.py  _users.py  _utils.py  _version_utils.py  abc.py  admin.py  blob_storage.py  buckets.py  client.py  config.py  config_factory.py  core.py  (+18 more)
neuro-sdk/tests/: __init__.py  conftest.py  test_admin.py  test_blob_storage.py  test_bucket_persistent_credentials.py  test_buckets.py  test_client.py  test_clusters.py  test_config.py  test_config_factory.py  test_core.py  test_disks.py  test_file_filter.py  test_file_utils.py  test_images.py  test_jobs.py  test_login.py  test_login_utils.py  test_parser.py  test_plugins.py  test_public_names.py  test_quota.py  test_retry.py  test_secrets.py  test_service_accounts.py  test_storage.py  test_storage_filestatus.py  test_tools.py  test_url_utils.py  test_users.py  test_version_check.py
neuro-sdk/tests/api/: test_config.py  test_config_factory.py  test_core.py  test_disks.py  test_file_filter.py  test_images.py  test_jobs.py  test_login_utils.py  test_parser.py  test_retry.py  test_secrets.py  test_storage.py  test_storage_filestatus.py  test_url_utils.py  test_users.py
neuro-sdk/tests/cli/: test_ael.py  test_alias.py  test_click_types.py  test_click_utils.py  test_job.py  test_project.py  test_root.py  test_stats.py  test_storage.py  test_text_helper.py  test_version_check.py
neuro-sdk/tests/e2e/: conftest.py  test_e2e_admin.py  test_e2e_blob_storage.py  test_e2e_images.py  test_e2e_jobs.py  test_e2e_storage.py
(+1578 files in other folders)
