[metadata]
name = apolo-sdk
version = 24.12.0
description = Apolo SDK
url = https://github.com/neuro-inc/platform-client-python
long_description = file: README.md
long_description_content_type = text/markdown
author = Apolo Team
author_email = dev@apolo.us
license = Apache 2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    =src
packages=find:
zip_safe = False
python_requires = >=3.9.0
include_package_data = True
install_requires =
    aiohttp>=3.11.3
    pyyaml>=5.0
    python-jose>=3.3.0
    python-dateutil>=2.7.0
    aiobotocore>=2.3.0,<3.0
    aiodocker>=0.24.0
    # certifi has no version requirement
    # CLI raises a warning for outdated package instead
    certifi
    toml>=0.10.0
    azure-storage-blob>=12.8.1,!=12.9.0
    google-auth>=2.0.2
    # https://github.com/python/importlib_metadata/issues/410#issuecomment-1304258228
    importlib_metadata>=4.11.4; python_version<"3.11"
    packaging>=20.4
    neuro-admin-client>=24.11.2
    neuro-config-client>=24.11.0

[options.packages.find]
where=src

[flake8]
exclude = .git,.env,__pycache__,.eggs
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile=black
sections=FUTURE,STDLIB,THIRDPARTY,APOLOSDK,FIRSTPARTY,TESTS,LOCALFOLDER
known_apolosdk=apolo_sdk
known_firstparty=apolo_cli
known_tests=tests

[coverage:run]
omit = apolo-sdk/tests/*
  apolo-cli/tests/*
  build-tools/*


[tool:pytest]
addopts= --cov-branch --cov-report xml
asyncio_mode = auto
log_cli=false
log_level=INFO
junit_family=xunit2
testpaths = apolo-sdk/tests/
  apolo-cli/tests/
markers =
  e2e
  e2e_job
  require_admin
  xdist_group
filterwarnings=error
  ignore:.*PROTOCOL_TLS is deprecated:DeprecationWarning:apolo_sdk
  ignore:.*PROTOCOL_TLS is deprecated:DeprecationWarning:tests
  ignore:.*PROTOCOL_TLS is deprecated:DeprecationWarning:aiohttp
  ignore:Inheritance class AuthorizedSession from ClientSession is discouraged:DeprecationWarning:google
  ; ignore::DeprecationWarning:yaml
  ignore:returning HTTPException object is deprecated.+:DeprecationWarning:aiodocker
  ignore:ssl_context is deprecated.+:DeprecationWarning:aiodocker
  ; deprecations introduced by cookiecutter and its dependencies:
  ignore:the imp module is deprecated.+:DeprecationWarning:past
  ignore:Flags not at the start of the expression.+:DeprecationWarning:cookiecutter
  ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working:DeprecationWarning:jinja2
  ignore:(rm_rf) error removing.+:UserWarning:pytest
  ; Remove the following when aiohttp is fixed (probably in 4.0.0 release)
  ignore::ResourceWarning:asyncio
  ignore::ResourceWarning:contextlib
  ignore:The loop argument is deprecated*:DeprecationWarning:asyncio
  ignore:.*pkg_resources\.declare_namespace.*:DeprecationWarning:pkg_resources
[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
incremental = False

[mypy-pytest]
ignore_missing_imports = true

[mypy-aiodocker.*]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-humanize]
ignore_missing_imports = true

[mypy-trustme]
ignore_missing_imports = true

[mypy-cookiecutter.*]
ignore_missing_imports = true

[mypy-idna]
ignore_missing_imports = true

[mypy-wcwidth]
ignore_missing_imports = true

[mypy-prompt_toolkit.*]
ignore_missing_imports = true

[mypy-pexpect]
ignore_missing_imports = true

[mypy-pexpect.replwrap]
ignore_missing_imports = true

[mypy-re_assert]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-sphinxcontrib.*]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-botocore.*]
ignore_missing_imports = true

[mypy-azure.*]
ignore_missing_imports = true

[mypy-google.*]
ignore_missing_imports = true
